# cssed-vte-plugin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in
CVS/: Entries  Repository
po/: ChangeLog  POTFILES.in  cssed-vte-plugin.pot  es.po  fr.po
po/CVS/: Entries  Repository
redhat/: cssed-vte-plugin.spec
redhat/CVS/: Entries  Repository  Root
src/: ChangeLog  Makefile.am  Makefile.in  vte.c
src/CVS/: Entries  Repository
